name:                esqueleto-unaccent
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.12 && <4.13
                     , esqueleto >=2.5.3 && <2.7
  exposed-modules:     Database.Esqueleto.Unaccent

